test/io/fsouza/chown/permission_error.good
permission_error.chpl:2: error: Operation not permitted in chown with path "file.txt"
